force-app/main/default/objects/Opportunity/fields/Avoid_Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Avoid_Currency_Symbol__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avoid Currency Symbol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>