force-app/main/default/objects/Opportunity/fields/Donation_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Donation_Purpose__c</fullName>
    <label>Donation Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVT Therapy</fullName>
            </value>
            <value>
                <fullName>Building Fund</fullName>
            </value>
            <value>
                <fullName>ASMASF</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>