force-app/main/default/objects/Opportunity/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <formula>CASE(
    Donation_Purpose__c,
    &quot;Building Fund&quot;, FLOOR(Amount / 7000),
    &quot;Education&quot;, FLOOR(Amount / 7000),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>