force-app/main/default/objects/Opportunity/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>150</length>
    <type>Text</type>
</CustomField>